# yta

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
tests/: run_tests.py
yta/: __init__.py  api.py  channels.py  cli.py  config.py  db.py  ingest.py  maintenance.py  playlist.py  search.py  summarize.py  utils.py
yta/static/: index.html
